# INF2004_T65

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt  main.c  reverse.c  turning.c
driver/barcode_scanner/: barcode_scanner.c
driver/encoder/: CMakeLists.txt  encoder.c
driver/ir sensor/: CMakeLists.txt  barcode_scanner.c
driver/irline/: CMakeLists.txt  irline.c
driver/magnetometer/: CMakeLists.txt  magnetometer.c  magnometer.c
driver/magnometer/: CMakeLists.txt
driver/motor/: CMakeLists.txt  motor.c
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c
driver/wifi/: CMakeLists.txt  LICENSE  hello.txt  htmldata.c  main.c  ssi.h  wifi.c
